k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: presence
spec:
  selector:
    app: backend

  ports:
    - port: 3000
      targetPort: 3000
