k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: presence
spec:
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80
