k8s/studio-service.yml
apiVersion: v1
kind: Service
metadata:
  name: studio-service
  namespace: presence
spec:
  selector:
    app: studio

  ports:
    - port: 5555
      targetPort: 5555
